--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   on_audio_query:
   path_provider: ^2.0.11
   permission_handler: ^10.2.0
+  just_audio: ^0.9.34
+  rxdart: ^0.27.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
